Window: hook up report rate buttons to ratbagd
For now we only expose report rates of 500 and 1000 Hz; we can add more
later when we know if people care about it.

--- a/data/window.ui
+++ b/data/window.ui
@@ -73,42 +73,33 @@
                                     <property name="homogeneous">True</property>
                                     <property name="layout_style">expand</property>
                                     <child>
-                                      <object class="GtkToggleButton">
+                                      <object class="GtkRadioButton" id="rate_500">
                                         <property name="label" translatable="yes">500</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
+                                        <property name="receives_default">False</property>
+                                        <property name="draw_indicator">False</property>
                                       </object>
                                       <packing>
                                         <property name="expand">True</property>
                                         <property name="fill">True</property>
-                                        <property name="position">2</property>
+                                        <property name="position">0</property>
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkToggleButton">
+                                      <object class="GtkRadioButton" id="rate_1000">
                                         <property name="label" translatable="yes">1000</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
+                                        <property name="receives_default">False</property>
+                                        <property name="active">True</property>
+                                        <property name="draw_indicator">False</property>
+                                        <property name="group">rate_500</property>
                                       </object>
                                       <packing>
                                         <property name="expand">True</property>
                                         <property name="fill">True</property>
-                                        <property name="position">2</property>
-                                      </packing>
-                                    </child>
-                                    <child>
-                                      <object class="GtkToggleButton">
-                                        <property name="label" translatable="yes">1500</property>
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="receives_default">True</property>
-                                      </object>
-                                      <packing>
-                                        <property name="expand">True</property>
-                                        <property name="fill">True</property>
-                                        <property name="position">2</property>
+                                        <property name="position">1</property>
                                       </packing>
                                     </child>
                                   </object>
