--- a/data/resolutionRow.ui
+++ b/data/resolutionRow.ui
@@ -107,6 +107,7 @@
                             <property name="round_digits">0</property>
                             <property name="digits">0</property>
                             <property name="value_pos">bottom</property>
+                            <signal name="scroll-event" handler="_on_scroll_event" swapped="no"/>
                             <signal name="value-changed" handler="_on_value_changed" swapped="no"/>
                           </object>
                         </child>
@@ -152,6 +153,7 @@
                             <property name="round_digits">0</property>
                             <property name="digits">0</property>
                             <property name="value_pos">bottom</property>
+                            <signal name="scroll-event" handler="_on_scroll_event" swapped="no"/>
                             <signal name="value-changed" handler="_on_value_changed" swapped="no"/>
                           </object>
                         </child>
