ResolutionRow: snap resolution values to multiples of 50
Mice don't do anything more fine-grained than this

--- a/data/resolutionRow.ui
+++ b/data/resolutionRow.ui
@@ -99,7 +99,9 @@
                         <property name="can_focus">True</property>
                         <property name="round_digits">0</property>
                         <property name="digits">0</property>
+                        <property name="draw_value">False</property>
                         <property name="value_pos">bottom</property>
+                        <signal name="change-value" handler="_on_change_value" swapped="no"/>
                         <signal name="scroll-event" handler="_on_scroll_event" swapped="no"/>
                         <signal name="value-changed" handler="_on_value_changed" swapped="no"/>
                       </object>
