ui: reconnect the radio button signal handler for left/right handed
Lost in 296597948442c8fdfffc88863d77f214233fcced

--- a/data/ui/ButtonDialog.ui
+++ b/data/ui/ButtonDialog.ui
@@ -291,6 +291,7 @@
                         <property name="hexpand">True</property>
                         <property name="active">True</property>
                         <property name="draw_indicator">False</property>
+                        <signal name="toggled" handler="_on_primary_mode_toggled" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">True</property>
@@ -309,6 +310,7 @@
                         <property name="hexpand">True</property>
                         <property name="draw_indicator">False</property>
                         <property name="group">radio_left_handed</property>
+                        <signal name="toggled" handler="_on_primary_mode_toggled" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">True</property>
