--- a/data/ui/ResolutionRow.ui
+++ b/data/ui/ResolutionRow.ui
@@ -102,7 +102,7 @@
                       <object class="GtkScale" id="scale">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="tooltip_text" translatable="yes">Set this resolution's DPI</property>
+                        <property name="tooltip_text" translatable="yes">Set this resolution’s DPI</property>
                         <property name="round_digits">0</property>
                         <property name="digits">0</property>
                         <property name="draw_value">False</property>
