--- a/data/ui/ResolutionsPage.ui
+++ b/data/ui/ResolutionsPage.ui
@@ -57,7 +57,7 @@
                       <object class="GtkButtonBox">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="tooltip_text" translatable="yes">Change the profile's report rate</property>
+                        <property name="tooltip_text" translatable="yes">Change the profile’s report rate</property>
                         <property name="homogeneous">True</property>
                         <property name="layout_style">expand</property>
                         <child>
